cmake_minimum_required (VERSION 3.0)
project (ARM_Cortex_M_GCC_Build_Test_App C CXX ASM)

include(CMakePrintHelpers)
cmake_print_variables(CMAKE_TOOLCHAIN_FILE)

set(PLAT4M_CORE_DIR ${PROJECT_SOURCE_DIR}/../../../Plat4m_Core)
set(PLAT4M_MATH_DIR ${PROJECT_SOURCE_DIR}/../../../Dependencies/Plat4m_Math)
set(PLAT4M_CONTROLS_DIR ${PROJECT_SOURCE_DIR}/../../../Dependencies/Plat4m_Controls)
set(PLAT4M_CMAKE_DIR ${PROJECT_SOURCE_DIR}/../../../Dependencies/Plat4m_CMake)
set(EIGEN_DIR ${PROJECT_SOURCE_DIR}/../../../Dependencies/Eigen)

include(${PLAT4M_CMAKE_DIR}/Plat4mMacros.cmake)

set(PROJECT_FLAGS "-g -Wno-comment")

set(CMAKE_ASM_FLAGS "${CMAKE_ASM_FLAGS} ${PROJECT_FLAGS}")
set(CMAKE_C_FLAGS   "${CMAKE_C_FLAGS} ${PROJECT_FLAGS}")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${PROJECT_FLAGS}")
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${PROJECT_FLAGS}")

include_directories(${PROJECT_SOURCE_DIR})
include_directories(${PLAT4M_CORE_DIR})
include_directories(${PLAT4M_CORE_DIR}/SystemFreeRtos/Config)
include_directories(${PLAT4M_CORE_DIR}/SystemFreeRtos/FreeRTOSv9.0.0)
include_directories(${PLAT4M_CORE_DIR}/SystemFreeRtos/FreeRTOSv9.0.0/FreeRTOS/Source/include)
include_directories(${PLAT4M_CORE_DIR}/SystemFreeRtos/FreeRTOSv9.0.0/FreeRTOS/Source/portable/GCC/ARM_CM4F)
include_directories(${PLAT4M_CORE_DIR}/../)

include_directories(${PLAT4M_MATH_DIR}/../)
include_directories(${PLAT4M_CONTROLS_DIR}/../)
include_directories(${PLAT4M_CMAKE_DIR}/../)
include_directories(${EIGEN_DIR})

find_source_files(${PROJECT_SOURCE_DIR})
find_source_files(${PLAT4M_CORE_DIR})
find_source_files(${PLAT4M_CORE_DIR}/AllocationMemoryLite)
find_source_files(${PLAT4M_CORE_DIR}/BoardStevalMKI160V1)
find_source_files(${PLAT4M_CORE_DIR}/BoardXNucleoIKS01A1)
find_source_files(${PLAT4M_CORE_DIR}/ComProtocolPlat4m)
find_source_files(${PLAT4M_CORE_DIR}/ImuLSM6DS0)
find_source_files(${PLAT4M_CORE_DIR}/ImuLSM6DS3)
find_source_files(${PLAT4M_CORE_DIR}/ImuServer)
find_source_files(${PLAT4M_CORE_DIR}/InsImu)
find_source_files(${PLAT4M_CORE_DIR}/SpiDeviceSt)
find_source_files(${PLAT4M_CORE_DIR}/SystemFreeRtos)
find_source_files(${PLAT4M_CORE_DIR}/SystemLite)
find_source_files(${PLAT4M_CORE_DIR}/SystemLiteCortexM)
combine_all_files()

add_executable(ARM_Cortex_M_GCC_Build_Test_App ${files})
